# cryoRIDGE

./: .gitignore  CITATION.cff  DECISIONS.md  LH_schematic_v2.m  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
chimerax_reliability/: bundle_info.xml
chimerax_reliability/src/: __init__.py  cmd.py  compute.py  (+3 more)
cohort/: COHORT_GAP_AUDIT.md  COHORT_RUN_LIST.sh  cohort_qscore_rho_table.csv  cohort_table.csv  conformation_pair_domains.json  conformation_pairs_domain_table.csv  conformation_pairs_table.csv  expansion_download_report.json  expansion_downloads.json  manifest.csv  mgta_domain_regions.json  publication_download_report.json  publication_downloads.json  trpv1_domain_regions.json
cryoem_mrc/: __init__.py  __main__.py  analysis.py  analysis_driver.py  builder_omission.py  chimerax_figures.py  cli.py  cohort_composition.py  cohort_emdb.py  cohort_labels.py  cohort_pipeline.py  cohort_resolution.py  complementarity.py  conformation_coupling.py  conformation_pair.py  conformation_pair_figma_export.py  cross_metric_figma_export.py  density_source.py  emringer.py  emringer_cohort.py  figure_cleanup.py  graphical_abstract_export.py  guinier_benchmark.py  guinier_sharpening.py  half_map_repro.py  halfmap_metrics.py  halfmap_run.py  hessian.py  incremental_prediction.py  local_fsc.py  local_resolution.py  manifest_policy.py  mechanics.py  metric_comparison.py  metric_schematic.py  model_building_export.py  mrc_compare.py  pipeline.py  placement_decoupling.py  placement_figma_export.py  (+17 more)
figures/: v_vs_locres.py
pdb/: 5ara.cif  6bqn.cif  6mmm.cif  6rn2.cif  6rn3.cif  6zwv.cif  7yc8.cif  8eow.cif  8ep1.cif  8tso.cif  8tsq.cif  8uv2.cif  8wg7.cif  9be6.cif  9chv.cif  9chx.cif
scripts/: compare_mrc.py  cryoridge_cluster.sbatch.example  diagnose_reliability_reproducibility.py  download_cohort_expansion.py  halfmap_qc_cluster.sbatch.example  prune_retired_figures.py  rerun_all_figures.py  run_analysis.py  run_blocres_local_resolution.py  run_blocres_mask_sensitivity.py  run_chimerax_mgta_pair_thesis_figures.py  run_chimerax_protein_figures.py  run_clpb_placement_supplement.py  run_cohort_bfactor_horse_race.py  run_cohort_bfactor_sharpening_sensitivity.py  run_cohort_contour_masks.py  run_cohort_cross_metric_figure.py  run_cohort_gap_audit.py  run_cohort_model_placement_audit.py  run_cohort_pipeline.py  run_cohort_summary_figures.py  run_conformation_pair_figma_export.py  run_cross_metric_figma_export.py  run_emringer_cohort_batch.py  run_emringer_cross_metric_summary.py  run_extended_feature_validation.py  run_fscq_cohort_batch.py  run_fscq_validation.py  run_graphical_abstract_export.py  run_guinier_sharpen_benchmark.py  run_halfmap_reliability_export.py  run_lh_map_reliability_export.py  run_lh_vs_b_and_fsc.py  run_locres_method_comparison.py  run_metric_comparison_export.py  run_metric_schematic_figure.py  run_monores_align_to_reference.py  run_placement_builder_omission_roc.py  run_placement_decoupling_analysis.py  run_placement_figma_export.py  (+27 more)
style/: __init__.py  figures.py  nature.py  palette.py  thesis_palette.py
tests/: test_blocres_status.py  test_builder_omission.py  test_chimerax_figures.py  test_chimerax_mgta_pair.py  test_chimerax_reliability_compute.py  test_cli.py  test_cohort_emdb.py  test_cohort_gap_audit.py  test_cohort_resolution.py  test_complementarity.py  test_conformation_pair_figma_export.py  test_conformation_pair_rmsd.py  test_conformation_pair_summary.py  test_cross_metric_figma_export.py  test_density_source.py  test_emringer.py  test_emringer_cohort.py  test_graphical_abstract_export.py  test_guinier_sharpening.py  test_guinier_sharpening_compare.py  test_halfmap_run.py  test_incremental_prediction.py  test_local_fsc.py  test_local_resolution_aggregate.py  test_manifest_policy.py  test_mask_bbox.py  test_mechanics.py  test_metric_comparison.py  test_model_building_export.py  test_model_placement_audit.py  test_mrc_compare.py  test_palette.py  test_pipeline_embed.py  test_placement_figma_export.py  test_placement_lomo.py  test_placement_supplement.py  test_placement_utility.py  test_qscore_cohort.py  test_qscore_figma_export.py  test_qscore_validation.py  (+6 more)
thesis/: __init__.py  bfactor_validation.py  builder_omission.py  chimerax_figures.py  cohort_pipeline.py  cohort_plot_utils.py  complementarity.py  conformation_coupling.py  conformation_pair.py  conformation_pair_figma_export.py  cross_metric_figma_export.py  graphical_abstract_export.py  guinier_benchmark.py  incremental_prediction.py  metric_comparison.py  metric_schematic.py  placement_decoupling.py  placement_figma_export.py  placement_supplement.py  placement_utility.py  qscore_cohort.py  qscore_figma_export.py  reliability_by_class_figma_export.py  reliability_volumes.py  thesis_figures.py  tv_curvature.py
(+40 files in other folders)
