[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoem-halfmap-qc"
version = "0.5.3"
description = "Half-map QC and local reliability scores for cryo-EM density maps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sarthak Mohanty" }]
keywords = ["cryo-em", "half-map", "reliability", "mrc", "structural-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "mrcfile>=1.4",
    "matplotlib>=3.7",
    "gemmi>=0.6",
    "seaborn>=0.13",
    "pandas>=2.0",
    "biopython>=1.80",
    "tqdm>=4.60",
    "rich>=13.7",
]

[project.optional-dependencies]
# Q-score is not on PyPI with a stable name; install separately for qscore scripts:
#   pip install git+https://github.com/3dem/qscore.git
dev = ["build", "twine"]

[project.scripts]
halfmap-qc = "cryoem_mrc.cli:main"

[tool.setuptools.packages.find]
include = ["cryoem_mrc*", "style*"]
# ``thesis/`` is repo-local cohort analysis (bfactor validation, metric comparison); not on PyPI.

[project.urls]
Homepage = "https://github.com/sarthaktexas/cryoem-halfmap-qc"
Documentation = "https://github.com/sarthaktexas/cryoem-halfmap-qc#readme"
Repository = "https://github.com/sarthaktexas/cryoem-halfmap-qc"
Issues = "https://github.com/sarthaktexas/cryoem-halfmap-qc/issues"
Changelog = "https://github.com/sarthaktexas/cryoem-halfmap-qc/releases"
