[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoridge"
version = "0.8.2"
description = "cryoRIDGE — Reliability Inferred from Density Gradient Energy for cryo-EM maps"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sarthak Mohanty" }]
keywords = ["cryo-em", "half-map", "reliability", "mrc", "structural-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "mrcfile>=1.4",
    "matplotlib>=3.7",
    "gemmi>=0.6",
    "seaborn>=0.13",
    "pandas>=2.0",
    "biopython>=1.80",
    "tqdm>=4.60",
    "rich>=13.7",
]

[project.optional-dependencies]
# Q-score is not on PyPI with a stable name; install separately for qscore scripts:
#   pip install git+https://github.com/3dem/qscore.git
dev = ["build", "twine"]

[project.scripts]
cryoridge = "cryoem_mrc.cli:main"

[tool.setuptools.packages.find]
include = ["cryoem_mrc*", "style*"]
# ``style/`` is a small palette + figure-helper package shipped alongside cryoem_mrc.
# ``thesis/`` is repo-local cohort validation (ROC/AUC, Q-score panels, Figma exports).

[project.urls]
Homepage = "https://github.com/sarthaktexas/cryoRIDGE"
Documentation = "https://github.com/sarthaktexas/cryoRIDGE#readme"
Repository = "https://github.com/sarthaktexas/cryoRIDGE"
Issues = "https://github.com/sarthaktexas/cryoRIDGE/issues"
Changelog = "https://github.com/sarthaktexas/cryoRIDGE/releases"
